Retiring deprecated Double constructor with string parameter for Double.valueOf call instead.